@@ -1,6 +1,7 @@
 package io.apicurio.registry.utils.protobuf.schema;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
@@ -9,7 +10,7 @@ public class ProtobufTestCaseReader {
 
     public static String getRawSchema(String fileName) {
         try {
-            return Files.readString(Paths.get(TEST_PROTO_PATH, fileName));
+            return new String(Files.readAllBytes(Paths.get(TEST_PROTO_PATH, fileName)), StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new RuntimeException("Error reading file", e);
         }
